prd/static/pgp-key/pgp-key-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgp-key-deploy
  labels:
    app: pgp-key
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgp-key
  template:
    metadata:
      labels:
        app: pgp-key
    spec:
      containers:
      - name: pgp-key
        image: eif0/static_pgp-key:1.5
        ports:
        - containerPort: 80
