prd/static/pgp-key/pgp-key-svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: pgp-key-svc
spec:
  selector:
    app: pgp-key
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
