prd/static/pgp-key/pgp-key-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pgp-key-ingress
  annotations:
    cert-manager.io/issuer: pgp-key-letsencrypt
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
  - hosts:
    - pgp.k3cloud.gq
    - www.k3cloud.gq
    secretName: pgp-key-secret
  rules:
  - host: pgp.k3cloud.gq
    http:
      paths:
      - path: /
        backend:
          serviceName: pgp-key-svc
          servicePort: 80
  - host: www.k3cloud.gq
    http:
      paths:
      - path: /
        backend:
          serviceName: pgp-key-svc
          servicePort: 80
